--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <script>
     // 🚨 ここをCloudflare Worker/Functionのエンドポイントに置き換えてください
-    const WORKER_ENDPOINT = '/api/fetch-sheet'; 
+    const WORKER_ENDPOINT = 'https://dnd-pawn-scraper.tororo4096.workers.dev/'; 
 
     /**
      * D&DキャラクターシートのHTML内容から必要なデータを解析します。
